# openalpr

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  Acknowledgment  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  cla.txt  conanfile.txt  persist_folder_predict.py  plate_size_quota.py  requirements.txt
src/: CMakeLists.txt  CPackConfig.cmake  beanstalk.h  beanstalk.hpp  conanfile.txt  daemon.cpp  main.cpp  persist_folder_predict.py  plate_push.py  videobuffer.cpp  videobuffer.h
src/bindings/c/: CMakeLists.txt  alpr_c.cpp  alpr_c.h  alprc_test.c
src/bindings/csharp/: openalpr-net.sln  readme.md
src/bindings/csharp/AlprNetGuiTest/: AlprNetGuiTest.csproj  Form1.Designer.cs  Form1.cs  Program.cs
src/bindings/csharp/AlprNetTest/: AlprNetTest.csproj  App.config  Program.cs
src/bindings/csharp/alprnet/: Alpr.cs  AlprNet.csproj  alprnet.sln  packages.config
src/bindings/csharp/openalpr-net/: AssemblyInfo.cpp  bitmapmat-net.cpp  bitmapmat-net.h  config-net.h  helper-net.h  lock-net.h  motiondetector-net.cpp  motiondetector-net.h  openalpr-net.cpp  openalpr-net.h  openalpr-net.vcxproj  openalpr-net.vcxproj.filters  types-net.h
src/bindings/csharp/openalprnet-cli/: CommandLine.cs  Program.cs  openalprnet-cli.csproj
src/bindings/csharp/openalprnet-windemo/: Form1.cs  Form1.resx  Program.cs  openalprnet-windemo.csproj
src/bindings/go/: CMakeLists.txt  main.go  make.sh  openalprgo.cpp  openalprgo.h
src/bindings/go/openalpr/: openalpr.go
src/bindings/java/: .gitignore  CMakeLists.txt  com_openalpr_jni_Alpr.h  make.sh  openalprjni.cpp
src/bindings/java/src/: Main.java
src/bindings/python/: .gitignore  CMakeLists.txt  make.sh  openalpr.py  openalprpy.cpp  setup.py  test.py  test_bytes_array.py  test_image.py
src/bindings/python/openalpr/: __init__.py  openalpr.py
src/cmake_modules/: FindTesseract.cmake  Findlog4cplus.cmake  LibFindMacros.cmake
src/cmake_modules/templates/: openalpr.pc.in
src/daemon/: beanstalk.c  beanstalk.cc  beanstalk.h  daemonconfig.cpp  daemonconfig.h  logging_videobuffer.h  uuid.cpp  uuid.h
src/inc/: safequeue.h
src/misc_utilities/: CMakeLists.txt  benchmark.cpp  binarizefontsheet.cpp  calibrate.cpp  classifychars.cpp  prepcharsfortraining.cpp  sortstate.cpp  tagplates.cpp
src/misc_utilities/benchmark/: benchmark.cpp  endtoendtest.h
src/misc_utilities/benchmarks/: benchmark.cpp  benchmark_utils.cpp  benchmark_utils.h  endtoendtest.cpp  endtoendtest.h
src/openalpr/: CMakeLists.txt  TRexpp.h  alpr.cpp  alpr.h  alpr_c.cpp  alpr_c.h  alpr_impl.cpp  alpr_impl.h  binarize_wolf.cpp  binarize_wolf.h  characteranalysis.cpp  characteranalysis.h  characterregion.cpp  characterregion.h  charactersegmenter.cpp  charactersegmenter.h  cjson.c  cjson.h  colorfilter.cpp  colorfilter.h  config.cpp  config.h  config_helper.cpp  config_helper.h  constants.h  featurematcher.cpp  featurematcher.h  licenseplatecandidate.cpp  licenseplatecandidate.h  linux_dev.h  motiondetector.cpp  motiondetector.h  ocr.cpp  ocr.h  pipeline_data.cpp  pipeline_data.h  platecorners.cpp  platecorners.h  platelines.cpp  platelines.h  (+18 more)
src/openalpr/detection/: detector.cpp  detector.h  detector_types.h  detectorcpu.cpp  detectorcpu.h  detectorcuda.cpp  detectorcuda.h  detectorfactory.cpp  detectorfactory.h  detectormask.cpp  detectormask.h  detectormorph.cpp  detectormorph.h  detectorocl.cpp  detectorocl.h
src/openalpr/edges/: edgefinder.cpp  edgefinder.h  platecorners.cpp  platecorners.h  platelines.cpp  platelines.h  scorekeeper.cpp  scorekeeper.h  textlinecollection.cpp  textlinecollection.h
src/openalpr/ocr/: ocr.cpp  ocr.h  ocrfactory.cpp  ocrfactory.h  tesseract_ocr.cpp  tesseract_ocr.h
src/openalpr/ocr/segmentation/: charactersegmenter.cpp  charactersegmenter.h  histogram.h  histogramhorizontal.h  histogramvertical.cpp  histogramvertical.h  segment.h  segmentationgroup.h
src/openalpr/postprocess/: matchTemplate.cpp  matchTemplate.h  postprocess.cpp  postprocess.h  regexrule.cpp  regexrule.h
src/openalpr/segmentation/: charactersegmenter.cpp  charactersegmenter.h  histogram.cpp  histogramhorizontal.cpp  segment.cpp  segment.h  segmentationgroup.cpp  segmentationgroup.h  verticalhistogram.cpp  verticalhistogram.h
src/openalpr/simpleini/: CMakeLists.txt  ConvertUTF.c  ConvertUTF.h  LICENCE.txt  README.md  ini.syn  simpleini.doxy  simpleini.h  snippets.cpp
src/openalpr/support/: CMakeLists.txt  filesystem.cpp  filesystem.h  platform.cpp  platform.h  re2.h  timing.cpp  timing.h  tinydir.h  utf8.cpp  utf8.h  version.cpp  version.h
src/openalpr/support/re2/: bitstate.cc  compile.cc  dfa.cc  filtered_re2.cc  filtered_re2.h  mimics_pcre.cc  nfa.cc  onepass.cc  parse.cc  prefilter.cc  prefilter.h  prefilter_tree.cc  prefilter_tree.h  prog.h  re2.cc  regexp.cc  regexp.h  set.cc  set.h  simplify.cc  stringpiece.cc  stringpiece.h  tostring.cc  unicode_casefold.h  unicode_groups.h  walker-inl.h
src/openalpr/support/regex/: CMakeLists.txt  onig_config.h  (+6 more)
src/openalpr/textdetection/: characteranalysis.cpp  characteranalysis.h  characteranalysis2l.cpp  characteranalysis2l.h  linefinder.cpp  linefinder.h  platemask.cpp  platemask.h  textcontours.cpp  textcontours.h  textline.cpp  textline.h
src/openalpr/tinythread/: CMakeLists.txt
src/statedetection/: CMakeLists.txt  featurematcher.cpp  featurematcher.h  line_segment.cpp  line_segment.h  state_detector.cpp  state_detector.h  state_detector_impl.cpp  state_detector_impl.h
src/tclap/: Arg.h  ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h
src/tests/: CMakeLists.txt  runtests.cpp  test_api.cpp  test_config.cpp  test_regex.cpp  test_utility.cpp
src/video/: CMakeLists.txt  logging_videobuffer.h  motiondetector.cpp  motiondetector.h  videobuffer.cpp  videobuffer.h
(+243 files in other folders)
