cmake_minimum_required(VERSION 3.3)
project(openalpr)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/bindings/csharp/openalpr-net/AssemblyInfo.cpp
    src/bindings/csharp/openalpr-net/bitmapmat-net.cpp
    src/bindings/csharp/openalpr-net/bitmapmat-net.h
    src/bindings/csharp/openalpr-net/config-net.h
    src/bindings/csharp/openalpr-net/helper-net.h
    src/bindings/csharp/openalpr-net/lock-net.h
    src/bindings/csharp/openalpr-net/motiondetector-net.cpp
    src/bindings/csharp/openalpr-net/motiondetector-net.h
    src/bindings/csharp/openalpr-net/openalpr-net.cpp
    src/bindings/csharp/openalpr-net/openalpr-net.h
    src/bindings/csharp/openalpr-net/resource.h
    src/bindings/csharp/openalpr-net/Stdafx.cpp
    src/bindings/csharp/openalpr-net/Stdafx.h
    src/bindings/csharp/openalpr-net/types-net.h
    src/bindings/go/openalprgo.cpp
    src/bindings/go/openalprgo.h
    src/bindings/java/com_openalpr_jni_Alpr.h
    src/bindings/java/openalprjni.cpp
    src/bindings/python/openalprpy.cpp
    src/daemon/beanstalk.c
    src/daemon/beanstalk.cc
    src/daemon/beanstalk.h
    src/daemon/beanstalk.hpp
    src/misc_utilities/benchmarks/benchmark.cpp
    src/misc_utilities/benchmarks/benchmark_utils.cpp
    src/misc_utilities/benchmarks/benchmark_utils.h
    src/misc_utilities/benchmarks/endtoendtest.cpp
    src/misc_utilities/benchmarks/endtoendtest.h
    src/misc_utilities/binarizefontsheet.cpp
    src/misc_utilities/calibrate.cpp
    src/misc_utilities/classifychars.cpp
    src/misc_utilities/prepcharsfortraining.cpp
    src/misc_utilities/sortstate.cpp
    src/misc_utilities/tagplates.cpp
    src/openalpr/detection/detector.cpp
    src/openalpr/detection/detector.h
    src/openalpr/detection/detectorcpu.cpp
    src/openalpr/detection/detectorcpu.h
    src/openalpr/detection/detectorcuda.cpp
    src/openalpr/detection/detectorcuda.h
    src/openalpr/detection/detectorfactory.cpp
    src/openalpr/detection/detectorfactory.h
    src/openalpr/detection/detectormorph.cpp
    src/openalpr/detection/detectormorph.h
    src/openalpr/detection/detectorocl.cpp
    src/openalpr/detection/detectorocl.h
    src/openalpr/edges/edgefinder.cpp
    src/openalpr/edges/edgefinder.h
    src/openalpr/edges/platecorners.cpp
    src/openalpr/edges/platecorners.h
    src/openalpr/edges/platelines.cpp
    src/openalpr/edges/platelines.h
    src/openalpr/edges/scorekeeper.cpp
    src/openalpr/edges/scorekeeper.h
    src/openalpr/edges/textlinecollection.cpp
    src/openalpr/edges/textlinecollection.h
    src/openalpr/postprocess/postprocess.cpp
    src/openalpr/postprocess/postprocess.h
    src/openalpr/postprocess/regexrule.cpp
    src/openalpr/postprocess/regexrule.h
    src/openalpr/segmentation/charactersegmenter.cpp
    src/openalpr/segmentation/charactersegmenter.h
    src/openalpr/segmentation/histogram.cpp
    src/openalpr/segmentation/histogram.h
    src/openalpr/segmentation/histogramhorizontal.cpp
    src/openalpr/segmentation/histogramhorizontal.h
    src/openalpr/segmentation/histogramvertical.cpp
    src/openalpr/segmentation/histogramvertical.h
    src/openalpr/segmentation/segment.cpp
    src/openalpr/segmentation/segment.h
    src/openalpr/segmentation/segmentationgroup.cpp
    src/openalpr/segmentation/segmentationgroup.h
    src/openalpr/simpleini/ConvertUTF.c
    src/openalpr/simpleini/ConvertUTF.h
    src/openalpr/simpleini/simpleini.h
    src/openalpr/simpleini/snippets.cpp
    src/openalpr/support/re2/util/atomicops.h
    src/openalpr/support/re2/util/benchmark.h
    src/openalpr/support/re2/util/flags.h
    src/openalpr/support/re2/util/hash.cc
    src/openalpr/support/re2/util/logging.h
    src/openalpr/support/re2/util/mutex.h
    src/openalpr/support/re2/util/pcre.h
    src/openalpr/support/re2/util/random.h
    src/openalpr/support/re2/util/rune.cc
    src/openalpr/support/re2/util/sparse_array.h
    src/openalpr/support/re2/util/sparse_set.h
    src/openalpr/support/re2/util/stringprintf.cc
    src/openalpr/support/re2/util/strutil.cc
    src/openalpr/support/re2/util/test.h
    src/openalpr/support/re2/util/thread.h
    src/openalpr/support/re2/util/utf.h
    src/openalpr/support/re2/util/util.h
    src/openalpr/support/re2/util/valgrind.cc
    src/openalpr/support/re2/util/valgrind.h
    src/openalpr/support/re2/bitstate.cc
    src/openalpr/support/re2/compile.cc
    src/openalpr/support/re2/dfa.cc
    src/openalpr/support/re2/filtered_re2.cc
    src/openalpr/support/re2/filtered_re2.h
    src/openalpr/support/re2/mimics_pcre.cc
    src/openalpr/support/re2/nfa.cc
    src/openalpr/support/re2/onepass.cc
    src/openalpr/support/re2/parse.cc
    src/openalpr/support/re2/perl_groups.cc
    src/openalpr/support/re2/prefilter.cc
    src/openalpr/support/re2/prefilter.h
    src/openalpr/support/re2/prefilter_tree.cc
    src/openalpr/support/re2/prefilter_tree.h
    src/openalpr/support/re2/prog.cc
    src/openalpr/support/re2/prog.h
    src/openalpr/support/re2/re2.cc
    src/openalpr/support/re2/regexp.cc
    src/openalpr/support/re2/regexp.h
    src/openalpr/support/re2/set.cc
    src/openalpr/support/re2/set.h
    src/openalpr/support/re2/simplify.cc
    src/openalpr/support/re2/stringpiece.cc
    src/openalpr/support/re2/stringpiece.h
    src/openalpr/support/re2/tostring.cc
    src/openalpr/support/re2/unicode_casefold.cc
    src/openalpr/support/re2/unicode_casefold.h
    src/openalpr/support/re2/unicode_groups.cc
    src/openalpr/support/re2/unicode_groups.h
    src/openalpr/support/re2/variadic_function.h
    src/openalpr/support/re2/walker-inl.h
    src/openalpr/support/utf8/checked.h
    src/openalpr/support/utf8/core.h
    src/openalpr/support/utf8/unchecked.h
    src/openalpr/support/windows/dirent.h
    src/openalpr/support/windows/unistd_partial.h
    src/openalpr/support/windows/utils.h
    src/openalpr/support/fast_mutex.h
    src/openalpr/support/filesystem.cpp
    src/openalpr/support/filesystem.h
    src/openalpr/support/platform.cpp
    src/openalpr/support/platform.h
    src/openalpr/support/re2.h
    src/openalpr/support/timing.cpp
    src/openalpr/support/timing.h
    src/openalpr/support/tinydir.h
    src/openalpr/support/tinythread.cpp
    src/openalpr/support/tinythread.h
    src/openalpr/support/utf8.cpp
    src/openalpr/support/utf8.h
    src/openalpr/support/version.cpp
    src/openalpr/support/version.h
    src/openalpr/textdetection/characteranalysis.cpp
    src/openalpr/textdetection/characteranalysis.h
    src/openalpr/textdetection/linefinder.cpp
    src/openalpr/textdetection/linefinder.h
    src/openalpr/textdetection/platemask.cpp
    src/openalpr/textdetection/platemask.h
    src/openalpr/textdetection/textcontours.cpp
    src/openalpr/textdetection/textcontours.h
    src/openalpr/textdetection/textline.cpp
    src/openalpr/textdetection/textline.h
    src/openalpr/alpr.cpp
    src/openalpr/alpr.h
    src/openalpr/alpr_impl.cpp
    src/openalpr/alpr_impl.h
    src/openalpr/binarize_wolf.cpp
    src/openalpr/binarize_wolf.h
    src/openalpr/cjson.c
    src/openalpr/cjson.h
    src/openalpr/colorfilter.cpp
    src/openalpr/colorfilter.h
    src/openalpr/config.cpp
    src/openalpr/config.h
    src/openalpr/constants.h
    src/openalpr/licenseplatecandidate.cpp
    src/openalpr/licenseplatecandidate.h
    src/openalpr/motiondetector.cpp
    src/openalpr/motiondetector.h
    src/openalpr/ocr.cpp
    src/openalpr/ocr.h
    src/openalpr/pipeline_data.cpp
    src/openalpr/pipeline_data.h
    src/openalpr/prewarp.cpp
    src/openalpr/prewarp.h
    src/openalpr/result_aggregator.cpp
    src/openalpr/result_aggregator.h
    src/openalpr/transformation.cpp
    src/openalpr/transformation.h
    src/openalpr/TRexpp.h
    src/openalpr/utility.cpp
    src/openalpr/utility.h
    src/statedetection/featurematcher.cpp
    src/statedetection/featurematcher.h
    src/statedetection/line_segment.cpp
    src/statedetection/line_segment.h
    src/statedetection/state_detector.cpp
    src/statedetection/state_detector.h
    src/statedetection/state_detector_impl.cpp
    src/statedetection/state_detector_impl.h
    src/tclap/Arg.h
    src/tclap/ArgException.h
    src/tclap/ArgTraits.h
    src/tclap/CmdLine.h
    src/tclap/CmdLineInterface.h
    src/tclap/CmdLineOutput.h
    src/tclap/Constraint.h
    src/tclap/DocBookOutput.h
    src/tclap/HelpVisitor.h
    src/tclap/IgnoreRestVisitor.h
    src/tclap/MultiArg.h
    src/tclap/MultiSwitchArg.h
    src/tclap/OptionalUnlabeledTracker.h
    src/tclap/StandardTraits.h
    src/tclap/StdOutput.h
    src/tclap/SwitchArg.h
    src/tclap/UnlabeledMultiArg.h
    src/tclap/UnlabeledValueArg.h
    src/tclap/ValueArg.h
    src/tclap/ValuesConstraint.h
    src/tclap/VersionVisitor.h
    src/tclap/Visitor.h
    src/tclap/XorHandler.h
    src/tclap/ZshCompletionOutput.h
    src/tests/catch.hpp
    src/tests/test_api.cpp
    src/tests/test_config.cpp
    src/tests/test_regex.cpp
    src/tests/test_utility.cpp
    src/video/logging_videobuffer.h
    src/video/videobuffer.cpp
    src/video/videobuffer.h
    src/daemon.cpp
    src/main.cpp src/openalpr/postprocess/matchTemplate.cpp src/openalpr/postprocess/matchTemplate.h)

add_executable(openalpr ${SOURCE_FILES})